--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                     <img src="img/omarl.jpg" alt="">
                 </div>
                 <div class="text-box">
-                    <p class="item-title">小エビと春野菜のオマールビスクソース<br>生パスタ</p>
+                    <p class="item-title">小エビと春野菜のオマールビスクソース<br class="sp-br">生パスタ</p>
                     <p class="item-price"><span class="p-sub">￥</span>1,280
                         (<span class="p-sub">税込¥</span>1,480)</p>
-                    <p class="item-subtitle">小エビと春野菜をたっぷり使用しました。<br>濃厚なオマールの風味が口いっぱいに広がります。</p>
+                    <p class="item-subtitle">小エビと春野菜をたっぷり使用しました。<br class="sp-br">濃厚なオマールの風味が口いっぱいに広がります。</p>
                 </div>
             </div>
              <!--02-->
@@ -130,9 +130,9 @@
                     <img src="img/lamp.jpg" alt="">
                 </div>
                 <div class="text-box">
-                    <p class="item-title">子羊の骨付きロース風味ステーキ<br>〜ソースフォンドボー〜</p>
+                    <p class="item-title">子羊の骨付きロース風味ステーキ<br class="sp-br">〜ソースフォンドボー〜</p>
                     <p class="item-price"><span class="p-sub">￥</span>1,880 (<span class="p-sub">税込¥</span>2,068)</p>
-                    <p class="item-subtitle">子羊の骨つきロースを香草で風味付けし<br>癖のない味わいに仕上げました。<br>日頃頑張る自分へのごほうびにぜひ。</p>
+                    <p class="item-subtitle">子羊の骨つきロースを香草で風味付けし<br class="sp-br">癖のない味わいに仕上げました。<br class="sp-br">日頃頑張る自分へのごほうびにぜひ。</p>
                 </div>
             </div>
             <!--03-->
@@ -141,9 +141,9 @@
                     <img src="img/steak.jpg" alt="">
                 </div>
                 <div class="text-box">
-                    <p class="item-title">牛フィレ肉のカットステーキ<br>〜スキレット仕立て〜</p>
+                    <p class="item-title">牛フィレ肉のカットステーキ<br class="sp-br">〜スキレット仕立て〜</p>
                     <p class="item-price"><span class="p-sub">￥</span>1,580 (<span class="p-sub">税込¥</span>1,738)</p>
-                    <p class="item-subtitle">肉の王様やわらかい牛フィレ肉とたっぷりの野菜。<br>岩塩・特製ソースでお好みの味わいで<br>お召し上がりください。</p>
+                    <p class="item-subtitle">肉の王様やわらかい牛フィレ肉とたっぷりの野菜。<br class="sp-br">岩塩・特製ソースでお好みの味わいで<br class="sp-br">お召し上がりください。</p>
                 </div>
             </div>
             <div class="menu-item"></div>
@@ -156,9 +156,9 @@
                         <img src="img/pancake.jpg">
                     </div>
                     <div class="text-box">
-                        <p class="item-title">たっぷり苺と2種のクリームパンケーキ<br>〜フレッシュパパイヤ添え〜</p>
+                        <p class="item-title">たっぷり苺と2種のクリームパンケーキ<br class="sp-br">〜フレッシュパパイヤ添え〜</p>
                         <p class="item-price"><span class="p-sub">￥</span>1,380 (<span class="p-sub">税込¥</span>1,518)</p>
-                        <p class="item-subtitle">たっぷり苺にチョコとラズベリーのホイップをトッピング。<br>いろいろな味の変化をお楽しみください。</p>
+                        <p class="item-subtitle">たっぷり苺にチョコとラズベリーのホイップをトッピング。<br class="sp-br">いろいろな味の変化をお楽しみください。</p>
                     </div>
                 </div>
                 <div class="comment-box">
