--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                     <img src="img/omarl.jpg" alt="">
                 </div>
                 <div class="text-box">
-                    <p class="item-title">小エビと春野菜のオマールビスクソース<br class="sp-br">生パスタ</p>
+                    <p class="item-title">小エビと春野菜のオマールビスクソース生パスタ</p>
                     <p class="item-price"><span class="p-sub">￥</span>1,280
-                        (<span class="p-sub">税込¥</span>1,480)</p>
+                        (<span class="p-sub">税込¥</span>1,408)</p>
                     <p class="item-subtitle">小エビと春野菜をたっぷり使用しました。<br class="sp-br">濃厚なオマールの風味が口いっぱいに広がります。</p>
                 </div>
             </div>
@@ -130,9 +130,9 @@
                     <img src="img/lamp.jpg" alt="">
                 </div>
                 <div class="text-box">
-                    <p class="item-title">子羊の骨付きロース風味ステーキ<br class="sp-br">〜ソースフォンドボー〜</p>
+                    <p class="item-title">子羊の骨付きロース香味ステーキ<br class="sp-br">〜ソースフォンドボー〜</p>
                     <p class="item-price"><span class="p-sub">￥</span>1,880 (<span class="p-sub">税込¥</span>2,068)</p>
-                    <p class="item-subtitle">子羊の骨つきロースを香草で風味付けし<br class="sp-br">癖のない味わいに仕上げました。<br class="sp-br">日頃頑張る自分へのごほうびにぜひ。</p>
+                    <p class="item-subtitle">子羊の骨付きロースを香草で風味付けし癖のない味わいに仕上げました。<br class="sp-br">日頃頑張る自分へのごほうびにぜひ。</p>
                 </div>
             </div>
             <!--03-->
@@ -143,7 +143,7 @@
                 <div class="text-box">
                     <p class="item-title">牛フィレ肉のカットステーキ<br class="sp-br">〜スキレット仕立て〜</p>
                     <p class="item-price"><span class="p-sub">￥</span>1,580 (<span class="p-sub">税込¥</span>1,738)</p>
-                    <p class="item-subtitle">肉の王様やわらかい牛フィレ肉とたっぷりの野菜。<br class="sp-br">岩塩・特製ソースでお好みの味わいで<br class="sp-br">お召し上がりください。</p>
+                    <p class="item-subtitle">肉の王様やわらかい牛フィレ肉とたっぷり野菜。<br class="sp-br">岩塩・特製ソースでお好みの味わいでお召し上がりください。</p>
                 </div>
             </div>
             <div class="menu-item"></div>
@@ -156,7 +156,7 @@
                         <img src="img/pancake.jpg">
                     </div>
                     <div class="text-box">
-                        <p class="item-title">たっぷり苺と2種のクリームパンケーキ<br class="sp-br">〜フレッシュパパイヤ添え〜</p>
+                        <p class="item-title">たっぷり苺と2種のクリームのパンケーキ<br class="sp-br">〜フレッシュパパイヤ添え〜</p>
                         <p class="item-price"><span class="p-sub">￥</span>1,380 (<span class="p-sub">税込¥</span>1,518)</p>
                         <p class="item-subtitle">たっぷり苺にチョコとラズベリーのホイップをトッピング。<br class="sp-br">いろいろな味の変化をお楽しみください。</p>
                     </div>
@@ -180,7 +180,7 @@
               </div>
             </div>
             <div class="text-container">
-                <p class="item-subtitle">カロリーが少し気になる方・ダイエット中の方におすすめの甘さ控えめの３種類の<br>ビネガードリングをご用意いたしました。<br>ビネガーが苦手な方にこそ飲んでいただきたい味わいに仕上げました。</p>
+                <p class="item-subtitle">カロリーが少し気になる方・ダイエット中の方におすすめの甘さ控えめの３種類の<br>ビネガードリンクをご用意しました。<br>ビネガーが苦手な方にこそ飲んでいただきたい味わいに仕上げました。</p>
              </div>
 
             <div class="drink-set">
@@ -195,9 +195,9 @@
     <div class="bg-white"></div>    
 </main> 
 <footer>
-    <div class="footerLogo">
-        <p><img src="img/footer_logo.jpg" alt=""></p>
-    </div>
+    <span>
+        <img src="img/footer_logo.jpg" alt="">
+    <span>
     <p class="copyright">Copyright © Joyfull Co.,Ltd.All rights reserved.</p>
 </footer>
 </body>
