--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               </div>
             </div>
             <div class="text-container">
-                <p class="item-subtitle">カロリーが少し気になる方・ダイエット中の方におすすめの甘さ控えめの３種類の<br>ビネガードリンクをご用意しました。<br>ビネガーが苦手な方にこそ飲んでいただきたい味わいに仕上げました。</p>
+                <p class="item-subtitle">カロリーが少し気になる方・ダイエット中の方におすすめの甘さ控えめの３種類の<br class="sp-br">ビネガードリンクをご用意しました。<br>ビネガーが苦手な方にこそ飲んでいただきたい味わいに仕上げました。</p>
              </div>
 
             <div class="drink-set">
