--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     </header>
     <main>
     <div class="top-img">
-        <p><img class="pc" src="img/topimage01.jpg" alt="PC版 Limited special Menu"></p>
-        <p><img class="sp" src="img/mobile-top.jpg" alt="スマホ版 Limited special Menu"></p>
+        <p><img class="pc" src="img/spring-top.jpg" alt="PC版 Limited special Menu"></p>
+        <p><img class="sp" src="img/spspring-top.jpg" alt="スマホ版 Limited special Menu"></p>
     </div>
     <div class="menu-container">
         <!--fair menu-->
